# skill_tracker_files

./: .coverage  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  docker-compose-kafka.yaml  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: gh_actions_tests.yaml
file_service/: config.py  main.py  msg_creator.py
file_service/connections/: mongo_connection.py  s3_connection.py
file_service/custom_exceptions/: custom.py
file_service/kafka/: producer.py  worker.py
file_service/repositories/: files.py  outbox.py
file_service/routers/: files.py
file_service/schemes/: files.py  outbox.py
file_service/services/: files.py
logger/: logger_conf.py
tests/: conftest.py
tests/connections/: test_mongo_connection.py  test_s3_connection.py
tests/repositories/: test_files.py
tests/routers/: test_files.py
tests/services/: test_files.py
tests/utils/: test_msg_creator.py
